<resources>
    <string name="app_name">SubasApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Subasta del pueblo</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hola">HOLAAAAAAAAAA</string>
    <string name="ofertante">Agregar ofertante</string>
    <string name="ofer">Ofertante</string>
    <string name="tp1">Ingrese nombre</string>
    <string name="tp2">Ingrese cédula</string>
    <string name="tp3">Ingrese deposito</string>
    <string name="bt1">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="cedula">Cédula</string>
    <string name="deposito">Deposito</string>

    <string name="list_ofer">Ofertantes</string>
    <string name="list_celu">Celulares</string>
    <string name="listar">Listar</string>
    <string-array name="opc">
        <item>Elimar ofertante</item>
        <item>Modificar ofertante</item>
        <item>Cancelar</item>
    </string-array>
    <string-array name="opc2">
        <item>Elimar celular</item>
        <item>Modificar celular</item>
        <item>Cancelar</item>
    </string-array>
    <string name="cel">Agregar Celular</string>
    <string name="celu">Celular</string>
    <string name="id">ID de celular</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string-array name="gamas">
        <item>Seleccione</item>
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>
    <string name="gama">Gama</string>
    <string name="costo">Costo base</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="oferta">Oferta</string>

</resources>
