<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/fragOfertante"
            android:icon="@drawable/account_arrow_right"
            android:title="@string/ofer" />
        <item
            android:id="@+id/fragCelular"
            android:icon="@drawable/cellphone"
            android:title="@string/celu" />

    </group>

    <group android:checkableBehavior="single">

    <item android:title="@string/listar">
        <menu>
            <item
                android:id="@+id/listarOfertantes"
                android:icon="@drawable/users"
                android:title="@string/list_ofer" />
            <item
                android:id="@+id/listarCelulares"
                android:icon="@drawable/devices"
                android:title="@string/list_celu" />

            <item
                android:id="@+id/fragOferta"
                android:icon="@drawable/devices"
                android:title="@string/oferta" />

        </menu>
    </item>
    </group>
</menu>
