<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/celu"
    app:startDestination="@+id/fragOfertante">

    <fragment
        android:id="@+id/fragOfertante"
        android:name="com.proyecto.subasapp.Vista.Fragmentos.FragOfertante"
        android:label="@string/ofer"
        tools:layout="@layout/fragment_frag_ofertante" />
    <fragment
        android:id="@+id/listarOfertantes"
        android:name="com.proyecto.subasapp.Vista.Listas.ListarOfertantes"
        android:label="@string/list_ofer"
        tools:layout="@layout/fragment_listar_ofertantes" />
    <fragment
        android:id="@+id/fragCelular"
        android:name="com.proyecto.subasapp.Vista.Fragmentos.FragCelular"
        android:label="@string/celu"
        tools:layout="@layout/fragment_frag_celulares" />
    <fragment
        android:id="@+id/listarCelulares"
        android:name="com.proyecto.subasapp.Vista.Listas.ListarCelulares"
        android:label="@string/list_celu"
        tools:layout="@layout/fragment_listar_celulares" />
    <fragment
        android:id="@+id/fragOferta"
        android:name="com.proyecto.subasapp.Vista.Fragmentos.FragOferta"
        android:label="@string/oferta"
        tools:layout="@layout/fragment_frag_oferta" />
</navigation>