<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#0F7464"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/icon" />

    <EditText
        android:id="@+id/eid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:selectAllOnFocus="true" />
    <EditText
        android:id="@+id/emarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/marca"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/emodelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/modelo"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        tools:targetApi="jelly_bean" />

    <Spinner
        android:id="@+id/spgama"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/ecosto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/costo"
        android:inputType="number"
        android:importantForAutofill="no"
        android:selectAllOnFocus="true"/>

</LinearLayout>