<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#0F7464"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/icon" />

    <EditText
        android:id="@+id/enombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/ofertante"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        android:selectAllOnFocus="true"
        />

      <EditText
      android:id="@+id/ecedula"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginLeft="4dp"
          android:selectAllOnFocus="true"
      android:layout_marginRight="4dp"
      android:layout_marginBottom="16dp"
      android:hint="@string/cedula"
          android:inputType="number"
      tools:targetApi="jelly_bean"
          android:importantForAutofill="no" />

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/edeposito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/deposito"
        tools:targetApi="jelly_bean"
        android:importantForAutofill="no"
        android:selectAllOnFocus="true"
        />
</LinearLayout>
