<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryTextColor"
    tools:context=".Vista.Fragmentos.FragCelular">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/cel"
                android:textColor="#FFC107"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="80dp"
                android:hint="@string/id"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etID"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="80dp"
                android:hint="@string/marca"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMarca"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="80dp"
                android:hint="@string/modelo"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gama"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="80dp">

                <AutoCompleteTextView

                    android:id="@+id/sp1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="80dp"
                android:hint="@string/costo"
              >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCosto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/bt2"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="25dp"
                android:text="@string/bt1"
                android:textSize="18sp"
                app:backgroundTint="#FFEB3B">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>


    </ScrollView>

</FrameLayout>