<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3AAABE">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:animationCache="false"
            android:background="#4CAF50"
            android:foreground="@drawable/side_nav_bar"
            app:cardBackgroundColor="@android:color/holo_blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="91dp"
            android:layout_height="86dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="36dp"
            android:text="@string/marca"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="36dp"
            android:text="@string/modelo"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/marca"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="12dp"
            android:text="@string/gama"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/marca" />

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="3dp"
            android:text="@string/marca"
            android:textColor="#097026"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/costo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="12dp"
            android:text="@string/costo"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/gama"
            app:layout_constraintTop_toBottomOf="@+id/modelo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
