<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        card_view:cardBackgroundColor="#2196F3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/todo"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.0"
                card_view:srcCompat="@drawable/icon" />

            <TextView
                android:id="@+id/idNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="196dp"
                android:layout_marginRight="196dp"
                android:text="@string/nombre"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.05"
                card_view:layout_constraintStart_toEndOf="@+id/imageView9"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/idCedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="208dp"
                android:layout_marginRight="208dp"
                android:text="@string/cedula"
                android:textSize="18sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.105"
                card_view:layout_constraintStart_toEndOf="@+id/imageView9"
                card_view:layout_constraintTop_toBottomOf="@+id/idNombre" />

            <TextView
                android:id="@+id/idDeposito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="196dp"
                android:layout_marginRight="196dp"
                android:layout_marginBottom="25dp"
                android:text="@string/deposito"
                android:textSize="18sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toEndOf="@+id/imageView9"
                card_view:layout_constraintTop_toBottomOf="@+id/idCedula"
                card_view:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>